--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core:
-  firebase_database:
+  firebase_core: 2.30.1
+  firebase_database: 10.5.4
   cloud_firestore: ^4.4.5
   get: ^4.3.5
   firebase_auth: ^4.3.0
@@ -42,7 +42,7 @@ dependencies:
   firebase_storage: ^11.0.16
   image_picker_web: ^3.0.0+1
   material: ^1.0.0+2
-  intl:
+  intl: 0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
